--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -1,7 +1,16 @@
+.syousai{
+    margin: 30px 0px 0px 30px;
+    
+}
+
+
 .show{
     margin: auto;
     margin-bottom: 40px;
     background: cornsilk;
+}
+.card-img-top{
+    margin-top: 20px;
 }
 .comment-wrapper{
     text-align: center;
