--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -14,17 +14,19 @@
  *= require_self
  */
  * {
-    padding: 0;
-    margin: 0;
-  }
+  padding: 0;
+  margin: 0;
+}
   body {
     font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ",
       Meiryo, "ＭＳ Ｐゴシック", sans-serif;
   }
   header {
-  
     background-color: #f1f8e8;
     height: 80px;
+    width: 100%;
+    padding: 10px;
+    margin-top: -25px;
     font-weight: bold;
     display: flex;
     justify-content: space-between;
@@ -49,10 +51,12 @@
     list-style: none;
     margin-right: 40px;
   }
-
   footer{
     background-color: #f1f8e8;
-    height: 80px;
-    font-weight: bold;    
+    height: 30px;
+    width: 100%;
+    font-weight: bold;   
+    position: relative; 
+    bottom: 0;
   }
  
