--- a/app/views/ecos/show.html.erb
+++ b/app/views/ecos/show.html.erb
@@ -1,5 +1,5 @@
 <%= stylesheet_link_tag 'show', :media => "all" %>
-<h3>投稿詳細</h3>
+<h2 class="syousai">投稿詳細</h3>
 
 <div class="card show" style="width: 40rem; height: 30rem">
   <p class="card-img-top"><%= image_tag @eco.image_url, size: "400x200" if @eco.image?%></p>
