--- a/app/views/ecos/top.html.erb
+++ b/app/views/ecos/top.html.erb
@@ -71,7 +71,7 @@
           <br>
           数ある環境問題の中で最も広範囲に及び、かつ最も深刻なものは、地球温暖化だと言っても過言ではないでしょう。
         </p>
-        <p><img src="/assets/onndannka.jpg" width="400px" heights="600px" ></p> 
+        <p><img src="/assets/onndannka.jpg" class="osen" ></p> 
       </div> 
     </div>
   </section>
@@ -114,7 +114,7 @@
           <br>
           しかし汚染水を飲んだために命を落としてしまう人もいるのが現状です。
         </p>
-        <p><img src="/assets/Pollution-Water-Industrial-Dump-River.jpg" width="500px" heights="700px" ></p> 
+        <p><img src="/assets/Pollution-Water-Industrial-Dump-River.jpg" class="kitana" ></p> 
       </div>
     </div>
   </section>
@@ -147,17 +147,14 @@
       <h2 class="title-second">森林破壊</h2>
       <div class="flex-sinrin">
         <p class="sinrin">
-          土地開発や木材の商業利用を目的とした人為的な森林伐採、または焼失などが原因で、森林が劣化及び縮小してしまうことを森林破壊と言います。
-          <br>
-          <br>
           森林破壊によって引き起こされることに、<font color="red">「野生動物の減少あるいは絶滅」</font>が挙げられます。
           森林の中では多くの希少な生物が絶妙なバランスの中で共生しているため、森林破壊が進み、もし一種でも生物が絶滅すれば、芋づる式に他の種も絶滅してしまうおそれがあります。
           <br>
           <br>
           そしてもう一つは、<font color="red">「気候変動への影響」</font>です。
-          伐採や焼失により森林が失われてしまうと、空気中の二酸化炭素が吸収されないだけではなく、樹木内部の二酸化炭素が大気中に放たれ、地球温暖化を進行させることに繋がってしまいます。
+          伐採や焼失により森林が失われてしまうと、空気中のCO₂が吸収されないだけではなく、樹木内部CO₂が大気中に放たれ、地球温暖化を進行させることに繋がってしまいます。
         </p>
-        <p><img src="/assets/roya-ann-miller-BkTsP32Dfnc-unsplash.jpg" width="500px" heights="300px" ></p> 
+        <p><img src="/assets/roya-ann-miller-BkTsP32Dfnc-unsplash.jpg" class="hakai"></p> 
       </div>
     </div>
   </section>
