--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -32,6 +32,29 @@
     justify-content: space-between;
     align-items: center;
   }
+  @media screen and (max-width: 725px) {
+    header {
+      font-size: 13px;
+    }
+  }
+  @media (max-width: 630px) {
+    header {
+      font-size: 5px;
+    }
+    h1 {
+      font-size: 30px;
+    }
+  }
+  
+  @media (max-width: 480px) {
+    header {
+      font-size: 1px;
+
+    }
+    h1 {
+      font-size: 25px;
+    }
+  }
   header a {
     color: rgb(143, 235, 147); 
     text-decoration: none; 
