--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,59 +21,147 @@
     font-family: "Hiragino Kaku Gothic Pro", "ヒラギノ角ゴ Pro W3", "メイリオ",
       Meiryo, "ＭＳ Ｐゴシック", sans-serif;
   }
-  header {
-    background-color: #08080800;
-    height: 100px;
-    width: 100%;
-    padding: 10px;
-    margin-top: -15px;
-    font-weight: bold;
+
+  .demobox-header{
+    background: white;
+    height: 90px;
+    padding: 1em;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
-  }
-  @media screen and (max-width: 725px) {
-    header {
-      font-size: 13px;
     }
-  }
-  @media (max-width: 630px) {
-    header {
-      font-size: 5px;
+    
+    .demobox-sitename{
+    font-weight: 900;
+    font-size: 40px;
+    flex-basis: 30%;
+    color: rgb(129, 252, 129);
     }
-    h1 {
-      font-size: 30px;
+   
+    .hamburger-demo-menubox *{
+      font-size: 16px;
     }
-  }
+    .hamburger-demo-menubox li{
+      font-size:14px;
+    }
+    
+    .input-hidden{
+      display: none;
+    }
+    
+    .hamburger-demo-switch{
+      cursor: pointer;
+      position: absolute;
+      right: 3%;
+      top: 0;
+      z-index: 9999;
+      width: 4em; 
+      height: 4em; 
+    }
+    
+    #hamburger-demo1:checked ~ .hamburger-demo-switch{
+      position: fixed;
+    }
+   
+    .hamburger-switch-line1, .hamburger-switch-line1:before, .hamburger-switch-line1:after{
+      width: 25px;
+      height: 3px;
+      background: #333; 
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transition: .3s;
+      content: "";
+    }
+    .hamburger-switch-line1{
+        transform: translate(-50%, -50%);
+    }
+    .hamburger-switch-line1:before{
+      transform: translate(-50%, -300%);
+    }
+    .hamburger-switch-line1:after{
+      transform: translate(-50%, 200%);
+    }
+    
+    #hamburger-demo1:checked ~ .hamburger-demo-switch .hamburger-switch-line1{
+      width: 0;
+    }
+    #hamburger-demo1:checked ~ .hamburger-demo-switch .hamburger-switch-line1:before{
+      transform: rotate(45deg) translate(-40%, 325%);
+    }
+    #hamburger-demo1:checked ~ .hamburger-demo-switch .hamburger-switch-line1:after{
+      transform: rotate(-45deg) translate(-40%, -325%);
+    }
+    
+    .hamburger-demo-menuwrap{
+      position: fixed;
+      height: 100%;
+      background: #fafafa; 
+      padding: 5em 3% 2em;
+      z-index: 9998;
+      transition: .3s;
+      overflow-y: scroll; 
+      top: 0;
+      left: 100%;
+      width: 70%;
+    }
+    
+    .hamburger-demo-menulist{
+      margin-right: 3%;
+      padding-left: 5% !important; 
+      list-style: none;
+    }
+    .hamburger-demo-menulist li a{
+      text-decoration: none;
+      color: rgb(1, 1, 1); 
+      display: block;
+      font-size: 20px;
+      padding: .5em 0;
+    }
+   
+    #hamburger-demo1:checked ~ .hamburger-demo-menuwrap{
+      left: 30%;
+    }
+     
+    #hamburger-demo1:checked ~ .hamburger-demo-cover{
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      left: 0;
+      z-index: 9997;
+      background: rgba(3,3,3,.5);
+      display: block;
+    }
+    .menu{
   
-  @media (max-width: 480px) {
-    header {
-      font-size: 1px;
+      display: flex;
+      flex-basis: 70%;
+      justify-content: space-between;
+      text-align: center;
+      text-decoration: none; 
+     
+      
+    }
+    .menu a {
+      color: rgb(139, 247, 49); 
+      text-decoration: none; 
+    }
+   
+    
+    @media (max-width: 992px){
+      .menu{
+        display: none;
+        
+      }
+    }
+    
+    @media (min-width: 992px){
+      .hamburger-demo-menubox{
+        display: none;
+      }
 
     }
-    h1 {
-      font-size: 25px;
-    }
-  }
-  header a {
-    color: rgb(143, 235, 147); 
-    text-decoration: none; 
-  }
-  header h1 {
-    color: rgb(89, 180, 101);
-    margin-left: 20px;
-  }
-  .header-list {
-    display: flex;
-    align-items: center;
-  }
-  header ul {
-    display: flex;
-  }
-  header li {
-    list-style: none;
-    margin-right: 40px;
-  }
   footer{
     background-color: #f1f8e8;
     height: 30px;
