--- a/app/assets/stylesheets/hello.scss
+++ b/app/assets/stylesheets/hello.scss
@@ -325,11 +325,18 @@
     }
 }
 @media screen and (max-width: 480px){
-    
-    .slide{ 
+    div.slide img {
+        position: absolute;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 550px;
+        opacity: 0;
+        animation :slideshow 24s linear infinite;
+      }
+    div.slide{ 
         position: relative;
         width: 100%;
-        height: 300px;
+        height: 550px;
         overflow: hidden;
        
     }  
@@ -352,6 +359,24 @@
         font-weight: 300;
         letter-spacing: 0;
     
+    }
+    .flex-container{
+        height: 180px;
+        font-size: 20px;
+        margin: 30px;
+        text-align: center;
+        display: flex;
+    
+        
+        
+    }
+    
+    .card-img-top{
+        height: 80%;
+        width: 95%;
+        margin: 2px;
+        text-align: center;
+        
     }
     section#second{
         height: 500px;
